# tomtemacro

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
assets/icon/: build-icons.sh
assets/linux/: tomtemacro.desktop
assets/macos/: Info.plist
crates/tomtemacro-core/: Cargo.toml
crates/tomtemacro-core/examples/: clicker.rs  hotkeys.rs  play.rs  record.rs
crates/tomtemacro-core/src/: capture.rs  clicker.rs  convert.rs  engine.rs  inject.rs  lib.rs  model.rs  platform.rs  player.rs  recorder.rs  storage.rs  timing.rs
crates/tomtemacro-core/src/script/: format.rs  from_events.rs  mod.rs  names.rs  parse.rs  transform.rs
crates/tomtemacro-core/tests/: hotkey_smoke.rs  roundtrip.rs  script.rs  x11_smoke.rs
crates/tomtemacro-gui/: Cargo.toml  build.rs
crates/tomtemacro-gui/src/: app.rs  banners.rs  hotkeys.rs  main.rs  settings.rs
crates/tomtemacro-gui/src/tabs/: cheatsheet.rs  clicker.rs  library.rs  macros.rs  mod.rs  recorder.rs  settings_tab.rs
docs/: macro-language.md
