[workspace]
resolver = "2"
members = ["crates/tomtemacro-core", "crates/tomtemacro-gui"]

[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["André Larsson <larsson.andre@gmail.com>"]
repository = "https://github.com/andre-larsson/tomtemacro"

[workspace.dependencies]
tomtemacro-core = { path = "crates/tomtemacro-core" }

serde = { version = "1", features = ["derive"] }
ron = "0.12"
crossbeam-channel = "0.5"
spin_sleep = "1.3"
enigo = "0.6"
rdev = "0.5.3"
directories = "6"
fastrand = "2"
thiserror = "2"
anyhow = "1"
log = "0.4"
regex = "1.12"
env_logger = "0.11"
eframe = "0.35"
global-hotkey = "0.8"
winresource = "0.1"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
strip = true
lto = "thin"
