[package]
name = "tomtemacro-core"
description = "Engine for TomteMacro: input model, injection, capture, recording, playback"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rdev.workspace = true
serde.workspace = true
ron.workspace = true
crossbeam-channel.workspace = true
spin_sleep.workspace = true
enigo.workspace = true
directories.workspace = true
thiserror.workspace = true
log.workspace = true
fastrand.workspace = true

[dev-dependencies]
env_logger.workspace = true
# For the phase-2 hotkey harness example and smoke test; the GUI owns the
# hotkey manager in the real app.
global-hotkey.workspace = true

[lints]
workspace = true
