[package]
name = "tomtemacro-gui"
description = "TomteMacro: the little gnome that clicks for you"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "tomte"
path = "src/main.rs"

[dependencies]
tomtemacro-core.workspace = true
anyhow.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
eframe.workspace = true
global-hotkey.workspace = true
log.workspace = true
env_logger.workspace = true
regex.workspace = true
ron.workspace = true
serde.workspace = true

[target.'cfg(windows)'.build-dependencies]
winresource.workspace = true

[features]
# Tray icon support lands in phase 7; feature exists so CI covers the flag.
tray = []

[lints]
workspace = true
